--- a/ar.html
+++ b/ar.html
@@ -5,8 +5,12 @@
   <body>
     <a-scene>
     <!--box-->
-        <a-box color='red'></a-box>
-    <!--box-->
+      <a-box color='green' width='4' height='2' depth='0.2' position='0 1 -7' rotation='90 0 0' scale='2 1 2'>
+        <a-circle side='double' color='pink' side='double' position='3 0 0' rotation='90 0 0 '></a-circle> 
+      </a-box> 
+
+      <a-circle color='blue' side='double' position='-2 1 -7' scale='2 2 1'></a-circle>
+      <a-cylinder  color='gray' height='2' width='100' radius='2' segments-radial='6' open-ended='true' side='double' scale='1 1 1' position='0 1 0' rotation='0 -90 90'></a-cylinder>
     </a-scene>
   </body>
 </html>
